<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_View">

    <item android:title="@string/ad_cat1">
            <menu>
                <item
                    android:title="@string/ad_my_ads"
                    android:id="@+id/id_my_ads"

                    />
                <item
                    android:title="@string/ad_car"
                    android:id="@+id/id_car"

                    />
                <item
                    android:title="@string/ad_pc"
                    android:id="@+id/id_pc"

                    />
                <item
                    android:title="@string/ad_smartphone"
                    android:id="@+id/id_smart"

                    />
                <item
                    android:title="@string/ad_dm"
                    android:id="@+id/id_dm"

                    />


            </menu>
    </item>
</menu>